--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #FFFFFF;
+  background-color: #333333;
 }
 
 #root {
