--- a/src/components/FrontPage/SessionHashInput/sessionHashInput.module.scss
+++ b/src/components/FrontPage/SessionHashInput/sessionHashInput.module.scss
@@ -33,14 +33,21 @@
   outline: none;
   z-index: 1;
   vertical-align: bottom;
-  margin-top: 28px;
+  margin-top: 26px;
 }
 
 .inputPlaceholder {
   position: absolute;
-  bottom: 8px;
+  bottom: 10px;
   z-index: -1;
   transition: cubic-bezier(0.4, 0, 0.2, 1) 0.2s;
+}
+
+.button {
+  background: none;
+  border: none;
+  padding: 0;
+  outline: none;
 }
 
 .input,
@@ -57,10 +64,12 @@
 .iconContainer {
   position: absolute;
   right: 0;
-  bottom: 4px;
+  bottom: 6px;
 
   &:not(.disabled) {
-    cursor: pointer;
+    .button {
+      cursor: pointer;
+    }
 
     .icon {
       fill: #B21ED7;
