--- a/src/components/FrontPage/currentSessionContainer.module.scss
+++ b/src/components/FrontPage/currentSessionContainer.module.scss
@@ -2,6 +2,7 @@
   height: 48px;
   display: flex;
   margin-top: 24px;
+  color: inherit;
 
   .currentSessionImage {
     height: 100%;
@@ -13,6 +14,14 @@
     img {
       height: 100%;
     }
+  }
+
+  .button {
+    border: none;
+    background: none;
+    padding: 0;
+    outline: none;
+    cursor: pointer;
   }
 
   .currentSessionInfo {
@@ -35,7 +44,6 @@
   .iconContainer {
     display: flex;
     align-items: center;
-    cursor: pointer;
 
     .icon {
       height: 23px;
